# SIMD-Single-Instruction-Multiple-Data-

./: CMakeLists.txt  README.md  lin_regression.cpp
